* src/gnome-utils/gnc-account-tree.c: add "(Report)" strings 	  to the various columns displayed in the report currency. 	  Partial fix for #118695.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8978 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-30  Derek Atkins  <derek@ihtfp.com>
+
+	* src/gnome-utils/gnc-account-tree.c: add "(Report)" strings
+	  to the various columns displayed in the report currency.
+	  Partial fix for #118695.
+
 2003-07-30  Benoit Grégoire  <bock@step.polymtl.ca>
 	
 	* src/scm/help-topics-index.scm: Commit Jon Lapham's doc changes.
