Run all glade files through glade2 to correct syntax and formatting to match.  The output of the g1->g2 conversion tool isn't quite what glade2 itself outputs.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@9003 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2003-08-08  David Hampton  <hampton@employees.org>
+
+	* lots of files: Sync up at the gnome2-merge-2 tag.
+
+	* acconfig.h:
+	* macros/autogen.sh:
+	* macros/gnome-guile-checks.m4: Make autoheader stop complaining.
+
+	* all glade files: Run through glade-2 to update syntax and
+	formatting.  The conversion tool and glade-2 itself don't produce
+	the same output.
+ 
+	
 2003-07-16  David Hampton  <hampton@employees.org>
 
 	* most every file: Sync up at the gnome2-merge-1 tag.
