* src/gnome/reconcile-list.c: our parent is a gnc-query-list, not 	  a clist.  Fix a bug so we properly call the parent destroy function.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@9032 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-10  Derek Atkins  <derek@ihtfp.com>
+
+	* src/gnome/reconcile-list.c: our parent is a gnc-query-list, not
+	  a clist.  Fix a bug so we properly call the parent destroy function.
+
 2003-08-05  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/help-topics-index.scm: Adapted to latest gnucash-docs
