Fix popup menus, and switching a proxy between actions.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@9039 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-08-10  David Hampton  <hampton@employees.org>
+
+	* lib/egg/egg-action.c: Fix problem connecting toolbar actions and
+	switching a proxy between actions.
+	
+	* lib/egg/egg-menu-merge.c: Make popup menuns work.
+
 2003-08-08  David Hampton  <hampton@employees.org>
 
 	* lots of files: Sync up at the gnome2-merge-2 tag.
