2003-08-12  Christian Stimming  <stimming@tuhh.de>
	* po/pt_BR.po: Updated Brazilian Portugese Translation by Jon
	Lapham.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@9065 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-12  Christian Stimming  <stimming@tuhh.de>
+
+	* po/pt_BR.po: Updated Brazilian Portugese Translation by Jon
+	Lapham.
+
 2003-08-10  Matt Vanecek  <mevanecek@yahoo.com>
 
     * src/backend/postgres/PostgresBackend.c: Changed all the
