2003-08-12  Christian Stimming  <stimming@tuhh.de>
	* po/de.po: Updated German translation.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@9068 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-08-12  Christian Stimming  <stimming@tuhh.de>
 
+	* po/de.po: Updated German translation.
+
 	* po/pt_BR.po: Updated Brazilian Portugese Translation by Jon
 	Lapham.
 
